--- a/MyShop/Properties/launchSettings.json
+++ b/MyShop/Properties/launchSettings.json
@@ -32,7 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "Swagger",
+      "launchUrl": "Products.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
