--- a/MyShop/appsettings.json
+++ b/MyShop/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Home":"Server=.;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;",
+    "School":"Server=SRV2\\PUPILS;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
