--- a/MyShop/Properties/launchSettings.json
+++ b/MyShop/Properties/launchSettings.json
@@ -5,20 +5,20 @@
       "launchBrowser": true,
       "launchUrl": "Swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "School"
+        "ASPNETCORE_ENVIRONMENT": "Home"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5095"
     },
     "https": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "LogIn.html",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "School"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7108;http://localhost:5095"
+        "commandName": "Project",
+        "launchBrowser": true,
+        "launchUrl": "Products.html",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Home"
+        },
+        "dotnetRunMessages": true,
+        "applicationUrl": "https://localhost:7108;http://localhost:5095"
     },
     "IIS Express": {
       "commandName": "IISExpress",
