--- a/MyShop/appsettings.Development.json
+++ b/MyShop/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "Home": "Server=.;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;",
+    "School": "Server=SRV2\\PUPILS;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "AllowedHosts": "*"
+
 }
