--- a/MyShop/Properties/launchSettings.json
+++ b/MyShop/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "launchBrowser": true,
       "launchUrl": "Swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Home"
+        "ASPNETCORE_ENVIRONMENT": "School"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5095"
@@ -14,9 +14,9 @@
         "commandName": "Project",
         "launchBrowser": true,
         "launchUrl": "Products.html",
-        "environmentVariables": {
-            "ASPNETCORE_ENVIRONMENT": "Home"
-        },
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "School"
+      },
         "dotnetRunMessages": true,
         "applicationUrl": "https://localhost:7108;http://localhost:5095"
     },
@@ -25,7 +25,7 @@
       "launchBrowser": true,
       "launchUrl": "Products.html",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "School"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   },
