--- a/MyShop/Properties/launchSettings.json
+++ b/MyShop/Properties/launchSettings.json
@@ -14,9 +14,9 @@
         "commandName": "Project",
         "launchBrowser": true,
         "launchUrl": "Products.html",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "School"
-      },
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Home"
+        },
         "dotnetRunMessages": true,
         "applicationUrl": "https://localhost:7108;http://localhost:5095"
     },
@@ -24,9 +24,9 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "Products.html",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Home"
+        }
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
