--- a/MyShop/appsettings.json
+++ b/MyShop/appsettings.json
@@ -6,8 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "Home":"Server=.;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;",
-    "School":"Server=SRV2\\PUPILS;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Home": "Server=.;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;",
+    "School": "Server=SRV2\\PUPILS;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "YourSuperSecretKey12345",
+    "Issuer": "MyShopIssuer",
+    "Audience": "MyShopAudience"
   },
   "AllowedHosts": "*"
 }
