Add password salt and encryption to User model

--- a/MyShop/appsettings.Development.json
+++ b/MyShop/appsettings.Development.json
@@ -6,9 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "Home": "Server=.;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;",
-    "School": "Server=SRV2\\PUPILS;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Home": "Server=.;Database=MyShop;Trusted_Connection=True;TrustServerCertificate=True;",
+    "School": "Server=SRV2\\PUPILS;Database=MyShop;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
-
 }
