--- a/MyShop/appsettings.json
+++ b/MyShop/appsettings.json
@@ -5,12 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "Home": "Server=.;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;",
-    "School": "Server=SRV2\\PUPILS;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        "Home": "Server=.;Database=MyShop;Trusted_Connection=True;TrustServerCertificate=True;",
+        "School": "Server=SRV2\\PUPILS;Database=MyShop_328264650;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
   "Jwt": {
-    "Key": "YourSuperSecretKey12345",
+    "Key": "YourSuperSecretKey1234567890123456",
     "Issuer": "MyShopIssuer",
     "Audience": "MyShopAudience"
   },
